bad/assign_binop_neq_void.example_compiler_output
ERROR
[1mbad/assign_binop_neq_void.lat:5:15: [1;31merror: [0;1mleft side is not assignable[m
	null == null = vfunc();
	             [1;32m^[m
[1mbad/assign_binop_neq_void.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	null == null = vfunc();
	[1;32m^[m
